[package]
name = "puniyu_logger"
version = "0.1.0"
description = "奈柚核心，logger核心实现"
edition = "2024"
repository = "https://github.com/PuniYu/logger"
readme = "README.md"
license = "GPL-3.0-only"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["chrono"] }
chrono = "0.4.41"
tracing-log = "0.2.0"
tracing-appender = "0.2.3"
chrono-tz = "0.10.4"
owo-colors = "4.2.2"
